- Dodan fxml fajl drug_edit.fxml i njegov respektivni kontroler DrugEditController - Implementirana mogućnost prepravke već dodanih lijekova. - Dodan veći broj actionEvent metoda u MainApothecaryController

--- a/resources/Translation.properties
+++ b/resources/Translation.properties
@@ -33,3 +33,4 @@ errorLoginHeadline=Username and password don't match
 errorLoginContent=The entered username and password don't match. Are you sure you already have an account?
 errorLoginHeadline2=Apothecary name and password don't match
 errorLoginContent2=The entered name and password don't match. Are you sure you already have an account?
+save=Create property
