- Implementirane funkcionalnosti vezane sa korisnički račun. - Model klasa ShoppingList.java obrisana - Model klasa Item.java promjenjena - U DAO klase dodane nove metode

--- a/resources/Translation.properties
+++ b/resources/Translation.properties
@@ -34,3 +34,15 @@ errorLoginContent=The entered username and password don't match. Are you sure yo
 errorLoginHeadline2=Apothecary name and password don't match
 errorLoginContent2=The entered name and password don't match. Are you sure you already have an account?
 save=Create property
+welcome=Create property
+nameEngTB=Create property
+nameLatTB=Create property
+priceTB=Create property
+quantityTB=Create property
+totalTB=Create property
+yourCheckout=Create property
+totalPrice=Create property
+buyMenu=Create property
+editAcc=Create property
+removeDrug=Create property
+checkout=Create property
