- Dodan novi fxml fajl search_menu.fxml i njegov respektivnu kontroler - Implementirana funkcionalnost pretrage artikala od strane kupca - Implementirana funkcionalnost dodavanja artikala u korpu

--- a/resources/Translation.properties
+++ b/resources/Translation.properties
@@ -46,3 +46,8 @@ buyMenu=Create property
 editAcc=Create property
 removeDrug=Create property
 checkout=Create property
+search=Create property
+photo=Create property
+amount=Create property
+enterAmount=Create property
+addToCheckout=Create property
