- Dodan novi fxml fajl edit_account_user.fxml.fxml i njegov respektivnu kontroler. - Implementirana funkcionalnost editovanja korisničkog računa. - Dodan novi top izuzetka IllegalAllergyType - Klasa Allergies unaprijeđena.

--- a/resources/Translation.properties
+++ b/resources/Translation.properties
@@ -51,3 +51,4 @@ photo=Create property
 amount=Create property
 enterAmount=Create property
 addToCheckout=Create property
+accountInformation=Create property
