- Implmentirana podrška "dark-theme" temi - Implementirana funkcionalnost odabira načina plaćanja svoje košarice - Izvršene preprave u poćetnom view-u

--- a/resources/Translation.properties
+++ b/resources/Translation.properties
@@ -52,3 +52,11 @@ amount=Create property
 enterAmount=Create property
 addToCheckout=Create property
 accountInformation=Create property
+paymentTypeChoose=Create property
+paymentCard=Create property
+delivery=Create property
+enterCreditCardNumber=Create property
+confirmPayment=Create property
+cancel=Create property
+enterAddress=Create property
+view=Create property
