- Implementirana Jasper Report funkcionalnost

--- a/resources/Translation.properties
+++ b/resources/Translation.properties
@@ -33,30 +33,83 @@ errorLoginHeadline=Username and password don't match
 errorLoginContent=The entered username and password don't match. Are you sure you already have an account?
 errorLoginHeadline2=Apothecary name and password don't match
 errorLoginContent2=The entered name and password don't match. Are you sure you already have an account?
-save=Create property
-welcome=Create property
-nameEngTB=Create property
-nameLatTB=Create property
-priceTB=Create property
-quantityTB=Create property
-totalTB=Create property
-yourCheckout=Create property
-totalPrice=Create property
-buyMenu=Create property
-editAcc=Create property
-removeDrug=Create property
-checkout=Create property
-search=Create property
-photo=Create property
-amount=Create property
-enterAmount=Create property
-addToCheckout=Create property
-accountInformation=Create property
-paymentTypeChoose=Create property
-paymentCard=Create property
-delivery=Create property
-enterCreditCardNumber=Create property
-confirmPayment=Create property
-cancel=Create property
-enterAddress=Create property
-view=Create property
+errorRegisteringNameTakenHeadline=Username taken!
+errorRegisteringNameTakenContent=The entered username is already being used. Please use a different one!
+errorRegisteringNameTakenHeadline2=Name already taken!
+errorRegisteringNameTakenContent2=The entered name of an apothecary is already being used. Please use a different one!
+invalid=Invalid
+ent=The entered
+errorMsgEasy=is invalid. It has to be between 3 and 24 characters!
+errorMsgHard=is invalid. It has to be between 3 and 24 characters and contain only letters A-Z and a-z!
+nameRU=name
+surnameRU=surname
+usernameRU=username
+passwordRU=password
+doctor_nameRU=doctor name
+doctor_surnameRU=doctor surname
+addressRU=address
+phoneRU=contact phone
+lgChoose=Choose the language you want:
+drugInf=Enter the information of the drug:
+nameEng=Name(English):
+nameBos=Name(Bosnian):
+nameLat=Name(Latin):
+content=Content:
+purpose=Drug effect:
+expDate=Expiration date:
+price=Price:
+clear=Clear
+upload=Upload an image
+add=Add
+addDrug=Add new drug
+nameBOSRU=name(Bosnian)
+nameENGRU=name(English)
+nameLATRU=name(Latin)
+file=_File
+help=Help
+logout=Logout
+about=About
+keyboardShortcuts=Keyboard shortcuts
+editDrug=Edit drug
+deleteDrug=Delete drug
+totalProfit=Total profit:
+administrationType=Administration type:
+save=Save
+nameEngTB=Name(English)
+nameLatTB=Name(Latin)
+priceTB=Price
+quantityTB=Quantity
+totalTB=Total price
+yourCheckout=Items in your basket:
+totalPrice=Total price:
+buyMenu=Buy menu
+editAcc=Edit account
+removeDrug=Remove drug
+checkout=Checkout
+search=Search
+photo=Image:
+amount=Amount:
+enterAmount=Enter amount here...
+addToCheckout=Add to basket
+confirmationTitle=Confirm buy
+confirmationContent=Are you sure you want to buy this product?
+accountInformation=Your account information:
+errorNoAmountHeader=Amount not entered!
+errorNoAmountContent=Amount not specified. Please insert the amount and try again!
+errorInvalidAmountHeader=Invalid amount!
+errorInvalidAmountContent=The amount you entered is considered invalid. Please insert a correct amount!
+language=Language
+darkTheme=Dark theme
+theme=Theme
+themeDark=Dark theme
+themeLight=Light theme
+lightTheme=Light theme
+paymentTypeChoose=Choose the payment type you want
+paymentCard=Pay by credit card
+delivery=Pay upon delivery
+enterCreditCardNumber=Enter you credit card number:
+confirmPayment=Confirm
+cancel=Cancel
+enterAddress=Enter your address:
+view=View
+printReport=Checkout report
