- Implementirana pasivna validacija - Implementirana rigoroznija validacija - Dodana utility klasa Validator u kojoj se nalaze metode za validaciju

--- a/resources/Translation.properties
+++ b/resources/Translation.properties
@@ -113,3 +113,20 @@ cancel=Cancel
 enterAddress=Enter your address:
 view=View
 printReport=Checkout report
+emailRU=eMail
+incorrectPhoneHeader=Invalid phone number!
+incorrectPhoneContent=The phone number you entered is invalid. Phone number must contain only numbers or '+' and '/' sign. Please enter a valid phone number!
+invalidDateHeader=Invalid date!
+invalidDateContent=The date you entered is invalid. Please enter a correct date!
+invalidPriceHeader=Invalid price!
+invalidPriceContent=The price you entered is invalid. Please enter a correct price!
+invalidImageHeader=Invalid image!
+invalidImageContent=Please upload an image!
+invalidBoxHeader=Invalid administration type!
+invalidBoxContent=Please select an administration type!
+noPaymentPlanSelectionHeader=Payment plan error!
+noPaymentPlanSelectionContent=You didn't select a payment plan!
+enterCreditCardHeader=Credit card error!
+enterCreditCardContent=Please insert the credit card number!
+enterPAHeader=Error!
+enterPAContent=Please insert the phone number and address!
