- Implemenentirani FX testovi - Implementirani Mocking testovi

--- a/resources/Translation.properties
+++ b/resources/Translation.properties
@@ -130,3 +130,4 @@ enterCreditCardHeader=Credit card error!
 enterCreditCardContent=Please insert the credit card number!
 enterPAHeader=Error!
 enterPAContent=Please insert the phone number and address!
+welcome=Create property
